--- a/Math/Wk1_ProbStat/ProbStat_probset.tex
+++ b/Math/Wk1_ProbStat/ProbStat_probset.tex
@@ -55,7 +55,7 @@
 
 \begin{flushleft}
    \textbf{\large{Math, Problem Set \#1, Probability Theory}} \\[5pt]
-   OSM Lab, Karl Schmedders \\[5pt]
+   OSM Lab instructor, Karl Schmedders \\[5pt]
    Due Monday, June 26 at 8:00am
 \end{flushleft}
 
