--- a/probsets/math/ProbStat_probset.tex
+++ b/probsets/math/ProbStat_probset.tex
@@ -65,7 +65,57 @@
 \begin{enumerate}
 	\item {\bf Exercises from chapter.} Do the following exercises in Chapter 3 of \citet{HJ17}: 3.6, 3.8, 3.11, 3.12 (watch this movie \href{https://www.youtube.com/watch?v=Zr_xWfThjJ0}{clip}), 3.16, 3.33, 3.36.
 			\item[(3.6)]
-			
+			$P(A)$\\
+			$= P(A \cap \Omega)$\\
+			$= P(\cup_{i \in I} B_i \cap A)$\\
+			$= \sum_{i \in I} P(A \cap B_i)$  (Finite additivity)
+
+			\item[(3.8)]
+			$P(\cup_{k = 1}^{n} E_k)$\\
+			$= 1 - P((\cup_{k = 1}^{n} E_k)^c)$\\
+			$= 1 - P(E_1^c \cap ... \cap E_n^c)$  (De Morgan's law)\\
+			$= 1 - \prod_{k = 1}^{n} (1 - P(E_k))$\\
+
+			\item[(3.11)]
+			$P(s = crime | s tested+)$\\
+			$= \frac{P(s = crime, s tested+)}{P(s tested +)}$\\
+			$= \frac{P(s tested+ | s = crime)P(s = crime)}{P(s tested +)}$\\
+			$= \frac{\frac{1}{250} \times \frac{1}{250000000} }{\frac{1}{3000000}}$\\
+			$= 0.000048$\\
+
+
+			\item[(3.12)]
+			For the three-door case, assume contestant chooses door 1 and Monty opened door 2 behind which there is a goat. Then $P(prize 1 | open 2) = \frac{P(open 2 | prize 1)P(prize 1)}{P(open 2)}$. Since $P(open 2) = P(open 2 | prize 1)P(prize 1) + P(open 2 | prize not in 1)P(prize not in 1) = \frac{1}{2}\times \frac{1}{3} + \frac{1}{2}\times \frac{2}{3} = \frac{1}{2}$, the probabity of winning if he chooses to stay would be: $\frac{\frac{1}{2} \times \frac{1}{3}}{\frac{1}{2}} = \frac{1}{3}$. Therefore the probability to win if he chooses to alter would be $\frac{2}{3}$.\\
+			By using the same logic, if there is 10 doors. $P(prize 1 | open 2 to 9) = \frac{P(open 2 to 9 | prize 1)P(prize 1)}{P(open 2 to 9)} = \frac{\frac{8}{9} \times \frac{1}{10}}{\frac{8}{9}} = \frac{1}{10}$. The probability to win if alterign would be $\frac{9}{10}$
+
+
+			\item[(3.16)]
+			$var(X)$\\
+			$= E((X - \mu)^2)$\\
+			$= E(X^2) - 2E(\mu X) + E(\mu^2)$\\
+			$= E(X^2) + \mu^2 - 2\mu^2$\\
+			$= E(X^2) - \mu^2$
+
+
+			\item[(3.33)]
+			Since $E(B) = np$ and $var(B) = np(1 - p)$\\
+			$P(|\frac{B}{n} - p| \geq \varepsilon)$\\
+			$= P(|N - np| \geq n\varepsilon)$\\
+			$\leq \frac{np(1-p)}{n\varepsilon^2}$ (Chebyshev inequality)\\
+			$= \frac{p(1-p}{\varepsilon^2}$\\
+
+			\item[(3.36)]
+			We define  
+			 \begin{equation}
+			       X = 
+			        \begin{cases}
+			            1 & \text{enrolled} \\
+			            0 & \text{not enrolled}
+			        \end{cases}
+ 			   \end{equation}\\
+			$p = \mu = 0.801$\\
+			According to the Central Limit Theorem:
+			$P(X > 5500) = 1 - \Phi (\frac{5500 - 6242\times 0.801}{\sqrt{0.801\times (1 - 0.801)} \times \sqrt{6242}})$
 	\item Construct examples of events $A$, $B$, and $C$, each of probability strictly between 0 and 1, such that
    		\begin{itemize}
 			\item[(a)] $P(A  \cap B) = P(A)P(B)$, $P(A  \cap C) = P(A)P(C)$, $P(B  \cap C) = P(B)P(C)$, but $P(A  \cap B \cap C) \neq P(A)P(B)P(C)$.\\
@@ -120,9 +170,15 @@
 
 \item Consider a probability measure space with $\Omega = [0,1]$.
 		\begin{itemize}
-			\item[(a)] Construct a random variable $X$ such that $E[X] < \infty$ but $E[X^2] = \infty$.
-			\item[(b)] Construct random variables $X$ and $Y$ such that $P(X>Y)>\frac{1}{2}$ but $E[X]<E[Y]$.
-			\item[(c)] Construct random variables $X$, $Y$, and $Z$ such that\\ $P(X>Y) P(Y>Z) P(X>Z) > 0$ and 						$E(X)=E(Y)=E(Z)=0$.
+			\item[(a)] Construct a random variable $X$ such that $E[X] < \infty$ but $E[X^2] = \infty$.\\
+			Since $var(X) = E(X^2) - [E(x)]^2$, this means that random variable $x$ will have an infinity variance. After searching on google, I find Pareto distribution statisfies the requirements that with a finite mean and infinite variance. \\
+
+			\item[(b)] Construct random variables $X$ and $Y$ such that $P(X>Y)>\frac{1}{2}$ but $E[X]<E[Y]$.\\
+			
+			
+			\item[(c)] Construct random variables $X$, $Y$, and $Z$ such that\\ $P(X>Y) P(Y>Z) P(X>Z) > 0$ and 						$E(X)=E(Y)=E(Z)=0$.\\
+			
+			Let $X, Y, Z$ be normally distributed random variables with $0$ means and same variance.
 		\end{itemize}
 
 	\item Let the random variables $X$ and $Z$ be independent with $X \sim N(0,1)$ and $P(Z=1)=P(Z=-1)=\frac{1}{2}$. 			Define $Y= XZ$ as the product of $X$ and $Z$. Prove or disprove each of the following statements.
