--- a/Econ/Wk2_DP/exercises_1_stachurski.ipynb
+++ b/Econ/Wk2_DP/exercises_1_stachurski.ipynb
@@ -70,7 +70,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -243,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
