--- a/probsets/computation/probset3/QR1_probset.ipynb
+++ b/probsets/computation/probset3/QR1_probset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -26,26 +26,26 @@
      "text": [
       "My QR decomposition: \n",
       "\n",
-      "[[ 0.24093536  0.61202441  0.02346863 -0.71133947]\n",
-      " [ 0.09727839  0.00100841  0.42050428  0.16264952]\n",
-      " [ 0.49727604  0.26074916  0.52198411  0.20342189]\n",
-      " [ 0.68649419 -0.06220147 -0.66485311  0.14322924]\n",
-      " [ 0.46000868 -0.56100303  0.32842057 -0.1600406 ]\n",
-      " [ 0.04818047  0.48871419 -0.01637816  0.61646835]] [[ 0.90392545  0.89772103  0.97801858  0.57726272]\n",
-      " [ 0.          0.6968521  -0.04355249  0.54389614]\n",
-      " [ 0.          0.          0.9286017   0.60635618]\n",
-      " [ 0.          0.          0.          0.35346835]]\n",
+      "[[ 0.50658975  0.13626751 -0.41834406 -0.09400699]\n",
+      " [ 0.15579745  0.89131504  0.19771933  0.3545368 ]\n",
+      " [ 0.50386541 -0.09922196 -0.55557498  0.15448913]\n",
+      " [ 0.35335349  0.05936637  0.41564855 -0.44583654]\n",
+      " [ 0.43984169 -0.04580842  0.32709999 -0.42727979]\n",
+      " [ 0.38326783 -0.41415081  0.44438006  0.67842554]] [[ 1.90054453  0.7393178   1.36836033  0.61736669]\n",
+      " [ 0.          0.58014298  0.40641393  0.35405742]\n",
+      " [ 0.          0.          0.93645044  0.48347854]\n",
+      " [ 0.          0.          0.          0.6485544 ]]\n",
       "Scipy's QR decomposition: \n",
       "\n",
-      "[[-0.24093536  0.61202441 -0.02346863  0.71133947]\n",
-      " [-0.09727839  0.00100841 -0.42050428 -0.16264952]\n",
-      " [-0.49727604  0.26074916 -0.52198411 -0.20342189]\n",
-      " [-0.68649419 -0.06220147  0.66485311 -0.14322924]\n",
-      " [-0.46000868 -0.56100303 -0.32842057  0.1600406 ]\n",
-      " [-0.04818047  0.48871419  0.01637816 -0.61646835]] [[-0.90392545 -0.89772103 -0.97801858 -0.57726272]\n",
-      " [ 0.          0.6968521  -0.04355249  0.54389614]\n",
-      " [ 0.          0.         -0.9286017  -0.60635618]\n",
-      " [ 0.          0.          0.         -0.35346835]]\n",
+      "[[-0.50658975 -0.13626751 -0.41834406 -0.09400699]\n",
+      " [-0.15579745 -0.89131504  0.19771933  0.3545368 ]\n",
+      " [-0.50386541  0.09922196 -0.55557498  0.15448913]\n",
+      " [-0.35335349 -0.05936637  0.41564855 -0.44583654]\n",
+      " [-0.43984169  0.04580842  0.32709999 -0.42727979]\n",
+      " [-0.38326783  0.41415081  0.44438006  0.67842554]] [[-1.90054453 -0.7393178  -1.36836033 -0.61736669]\n",
+      " [ 0.         -0.58014298 -0.40641393 -0.35405742]\n",
+      " [ 0.          0.          0.93645044  0.48347854]\n",
+      " [ 0.          0.          0.          0.6485544 ]]\n",
       "The results might be different since QR decomposition is not unique\n",
       "(6, 4) (6, 4) (4, 4)\n",
       "True\n",
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -97,7 +97,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0653196955092\n"
+      "0.0616431935324\n"
      ]
     }
    ],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -121,7 +121,7 @@
        "array([-1,  3])"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -165,7 +165,7 @@
        "True"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -236,10 +236,7 @@
     "print(np.allclose(np.dot(np.dot(Q, H), Q.T), A))\n",
     "\n",
     "print(np.allclose(np.triu(H_my, -1), H_my))\n",
-    "print(np.allclose(np.dot(np.dot(Q_my, H_my), Q_my.T), A))\n",
-    "\n",
-    "\n",
-    "        "
+    "print(np.allclose(np.dot(np.dot(Q_my, H_my), Q_my.T), A))\n"
    ]
   },
   {
