--- a/probsets/math/wk3/ProbSet3.tex
+++ b/probsets/math/wk3/ProbSet3.tex
@@ -8,7 +8,7 @@
 \lhead{}
 \chead{}
 \rhead{}
-\lfoot{\footnotesize\textsl{OSM Lab, Summer 2017, Math,Inner Product Space \#2}}
+\lfoot{\footnotesize\textsl{OSM Lab, Summer 2017, Math,Inner Product Space \#3}}
 \cfoot{}
 \rfoot{\footnotesize\textsl{Page \thepage\ of \pageref{LastPage}}}
 \renewcommand\headrulewidth{0pt}
@@ -54,10 +54,10 @@
 \begin{document}
 
 \begin{flushleft}
-   \textbf{\large{Math, Inner Product Space\#2}} \\[5pt]
-   OSM Lab instructor,Zachary Boyd \\[5pt]
+   \textbf{\large{Math, Inner Product Space\#3}} \\[5pt]
+   OSM Lab instructor, John, Van den Berghe \\[5pt]
    OSM Lab student, CHEN Anhua\\[5pt]
-   Due Wednesday, July 5 at 8:00am
+   Due Wednesday, July 10 at 8:00am
 \end{flushleft}
 
 \vspace{5mm}
@@ -99,6 +99,66 @@
 	iii. \\
 
 	\item(4.13)\\
+	Let $B = P^{-1}AP$, where $B$ is a diagonal matrix. Since $P$ is a non-singular matrix, it indicates that A is diagonalizable. According to the Theorem 4.3.7, A is also semisimple. Then columns of  $P$ are just the eigenvectors of $A$ and $B$ is a diagonal marix with eigenvalues on its diagonal. $\lambda = 1$ and $0.4$. Therefore, we let $P = \begin{bmatrix}
+	   2 &    1\\
+	   1 & -1 \\
+	\end{bmatrix}$\\
+
+	\item(4.15)\\
+	We will use Theorem 4.3.7 and Proposition 4.3.10 to prove this. According to Theorem 4.3.7, $A$ is semisimple, therefore diagonalizable. We could write $D = P^{-1}AP$ where $D$ is a diagonalizable matrix with eigenvalues of $A$ on its diagonal. And columns of $P$ form the eigenspace of $A$. According to Proposition 4.3.10, we know that for $i = 1,2, \hdots n, D^{i} = P^{-1}A^{i}P)$. Also, becasue $P$ is a linear operator, we have $P^{-1}f(A)P = a_{0}I + a_{1}P^{-1}AP + \hdots + a_{n}P^{-1}A^{n}P = a_{0}I + a_{1}D + \hdots + a_{n}D^{n}$. Since we know that $D^{i} =  \begin{bmatrix}
+	   \lambda_{1}^{i} &     & \\
+	    & \ddots & \\
+	   &     &  \lambda_{n}^{i} \\
+	\end{bmatrix}$, Then $P^{-1}f(A)P = \begin{bmatrix}
+	   \sum_{i = 0}^{n} a_{i}\lambda_{1}^{i} &     & \\
+	    & \ddots & \\
+	   &     &  \sum_{i = 0}^{n} a_{i}\lambda_{n}^{i} \\
+	\end{bmatrix} =  \begin{bmatrix}
+	   f(\lambda_{1}) &     & \\
+	    & \ddots & \\
+	   &     &  f(\lambda_{n})\\
+	\end{bmatrix}$ \\
+
+	\item(4.16)\\
+	i. We have in 4.13 that $D = P^{-1}AP, where D = \begin{bmatrix}
+	   1 &    0\\
+	   0 & 0.4\\
+	\end{bmatrix} $ and $P =  \begin{bmatrix}
+	   2 &    1\\
+	   1 & -1 \\
+	\end{bmatrix}$. According to proposition 4.3.10, $A^{n} = PD^{n}P^{-1}$. So $\lim_{n \to \infty}A^{n} = \lim_{n \to \infty}PD^{n}P^{-1} = P (\lim_{n \to \infty}D^{n}) P^{-1} = P \begin{bmatrix}
+	   1 &  0\\
+	   0 & 0 \\
+	\end{bmatrix}P^{-1} =  \begin{bmatrix}
+	   \frac{2}{3} &   \frac{2}{3}\\
+	    \frac{1}{3} &  \frac{1}{3} \\
+	\end{bmatrix}$\\
+	ii. It doesn't matter.\\
+	iii. Since the eigenvalues of $A$ are $1$ and $0.4$, according to Theorem 4.3.12, the eigenvalues are $3+5*1 + 1^3 = 9$ and $3 + 5*0.4 + 0.4^3 = 5.064$. \\
+
+	\item(4.18)\\
+	Since the characteristic polynomial of $A$ and $A^{T}$ is the same, therefore, $A$ and $A^{T}$ have the same eigenvalues. If $\lambda$ is a eigenvalue of $A$, it's Also an eigenvalue of $A^{T}$. Therefore, $\exists $non-zero $x$, such that $A^{T}X = \lambda x \implies x^{T}A =\lambda x^{T}$.\\
+
+	\item(4.20)\\
+	Since A is Hermitian, $B = U^{H}AU \implies B^{H} = ( U^{H}AU)^{H} = (U^{H}A^{H}U) = (U^{H}AU) = B$.\\
+	
+	\item(4.24)\\
+	i. If $A$ is Hermitian, \\
+
+	\item(4.31)\\
+	i. $||A||_{2} = \sup_{x \neq 0} \frac{||Ax||_{2}}{||x||_{2}}$\\
+	   $=  \sup_{x \neq 0} \frac{||U\Sigma V^{H}x||_{2}}{||x||_{2}}$\\
+	   $= \sup_{x \neq 0} \frac{||\Sigma V^{H}x||_{2}}{||x||_{2}}$ (invariant under multiplication by orthonormal matrix)\\
+	   $= \sup_{x \neq 0} \frac{||\Sigma y||_{2}}{||Vy||_{2}}$ (let $y  = V^{H}x$)\\
+	   $= \sup_{x \neq 0} \frac{||\Sigma y||_{2}}{||y||_{2}}$  (invariant under multiplication by orthonormal matrix)\\
+	   $= \sup_{x \neq 0} \frac{(\sum_{i = 1}^{n} |\sigma_{i}y_{i}|^{2})^{\frac{1}{2}}}{(\sum_{i = 1}^{n} |y_{i}|^{2})^{\frac{1}{2}}}$\\
+	   We let y =  $[1, 0, \hdots 0]^{H}$, then $||A||_{2} = \sigma_{1}$\\
+	ii. Since, based on singular value decomposition, $A^{-1} = (U\Sigma V^{H})^{-1} = V \Sigma^{-1} U^{H}$. The diagonal elements of $\Sigma^{-1}$ are $\frac{1}{\sigma_{1}}, \frac{1}{\sigma_{2}}, \hdots, \frac{1}{\sigma_{n}}$, the biggest of which will be $\frac{1}{\sigma_{n}}$. Therefore, according to the result of i., we know that $||A^{-1}||_{2} = \frac{1}{\sigma_{n}}$.\\
+	iii. It's easy to prove that $||A||_{2}^{H} = ||A||_{2}^{T} = ||A||_{2}$ since the $\Sigma$ of their SVD is the same. $A^{H}A = V\Sigma^{H}U^{H}U\Sigma V^{H} = V \Sigma^{H}\Sigma V^{H}$. Since the diagonal elements of $ \Sigma^{H}\Sigma$ are $\sigma_{1}^{2}, \sigma_{2}^{2}, \hdots, \sigma_{n}^{2}$. By using the results of i., we could know that $||A^{H}A|| = \sigma_{1}^{2}$.\\
+	iv. $||UAV||_{2}^{2} = ||UAVV^{H}A^{H}U^{H}||_{2} = ||UAA^{H}U^{H}||_{2} = ||AA^{H}U^{H}||_{2} = ||(AA^{H}U^{H})^{H}||_{2} = ||UAA^{H}||_{2} = ||AA^{H}||_{2} = ||A||_{2}^{2}$\\
+
+	\item(4.25)\\
+	
 	
 
 
