finishing computational homework 3

--- a/probsets/computation/probset3/DrazinInverse_probset.ipynb
+++ b/probsets/computation/probset3/DrazinInverse_probset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -98,7 +98,7 @@
        "True"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -190,21 +190,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Once deleted, variables cannot be recovered. Proceed (y/[n])? y\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%reset"
+    "#problem 4 & 5\n",
+    "class LinkPredictor(object):\n",
+    "    def __init__(self,filename):\n",
+    "        df = pd.read_csv(filename,header=None,index_col=False).astype(str)\n",
+    "        mat_data = df.as_matrix()\n",
+    "        m,n = mat_data.shape\n",
+    "        names, inv = np.unique(mat_data, return_inverse=True)\n",
+    "        inv = inv.reshape((m,n))\n",
+    "        \n",
+    "        A = np.zeros([len(names),len(names)],dtype=float)\n",
+    "        for i in range(m):\n",
+    "            A[inv[i,0],inv[i,1]] = 1\n",
+    "            A[inv[i,1],inv[i,0]] = 1\n",
+    "        R = effective_resistance(A)\n",
+    "        \n",
+    "        self.names = names\n",
+    "        self.adjacency = A\n",
+    "        self.resistance = R\n",
+    "    \n",
+    "    def predict_link(self,node=None):\n",
+    "        resis = self.resistance\n",
+    "        resis[resis==0] = 1e10\n",
+    "        \n",
+    "        if node!=None:\n",
+    "            if np.any(self.names[self.names==node]):\n",
+    "                index = np.where(self.names==node)[0][0]\n",
+    "                resis = resis[index,:]\n",
+    "                min_val = np.min(resis[self.adjacency[index,:]!=1])\n",
+    "                loc = np.where(resis==min_val)\n",
+    "                return self.names[loc[0]]\n",
+    "            else:\n",
+    "                raise ValueError(\"Given name doesn't exist in network.\")\n",
+    "        else:\n",
+    "            minval = np.min(resis[self.adjacency!=1])\n",
+    "            loc1,loc2 = np.where(resis==minval)\n",
+    "            return (self.names[loc1[0]],self.names[loc2[0]])\n",
+    "        \n",
+    "    def add_link(self,name1,name2):\n",
+    "        if np.any(self.names[self.names==name1]) and np.any(self.names[self.names==name2]):\n",
+    "            loc1 = np.where(self.names==name1)[0][0]\n",
+    "            loc2 = np.where(self.names==name2)[0][0]\n",
+    "            self.adjacency[loc1,loc2] = self.adjacency[loc1,loc2]+1\n",
+    "            self.adjacency[loc2,loc1] = self.adjacency[loc2,loc1]+1\n",
+    "            self.resistance = problem_3(self.adjacency)\n",
+    "        else:\n",
+    "            raise ValueError(\"Given name doesn't exist in network.\")"
    ]
   },
   {
