update week 4 computatational and math homework'

--- a/probsets/econ/wk3/Exercise_1.ipynb
+++ b/probsets/econ/wk3/Exercise_1.ipynb
@@ -1,13 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "This notebook is for response to the first exercise question.\n",
+    "The idea is basically adding one more dimension to the deterministic case.\n",
+    "The results are plotted below."
+   ]
   },
   {
    "cell_type": "code",
