--- a/probsets/econ/wk3/Exercise_3.ipynb
+++ b/probsets/econ/wk3/Exercise_3.ipynb
@@ -161,12 +161,12 @@
    "source": [
     "# Differential functions\n",
     "\n",
-    "def c_1(k_1,k_0,psi=1.08,delta=0.154):\n",
-    "    return psi*(k_1/k_0-(1-delta))\n",
+    "def c_1(k,k_prime,psi=1.08,delta=0.154):\n",
+    "    return psi*(k/k_prime-(1-delta))\n",
     "\n",
     "\n",
-    "def c_2(k_1,k_0,psi=1.08,delta=0.154):\n",
-    "    return (psi/2)*((1-delta)**2-(k_1/k_0)**2)\n",
+    "def c_2(k,k_prime,psi=1.08,delta=0.154):\n",
+    "    return (psi/2)*((1-delta)**2-(k/k_prime)**2)\n",
     "\n",
     "\n",
     "def op_2(z,k,alpha_l=0.65,alpha_k=0.297,w=0.7):\n",
