adding structural estimation homework

--- a/Personal_lecture_material/Econ/wk4/Exercise_2.ipynb
+++ b/Personal_lecture_material/Econ/wk4/Exercise_2.ipynb
@@ -69,6 +69,7 @@
     "    mean_vec = np.append(mu, mean_vec)                # create the vector of means of normal distribution\n",
     "    pdf_vals    = ((1/(sigma * np.sqrt(2 * np.pi)) *\n",
     "                    np.exp( - (z_vec - mean_vec)**2 / (2 * sigma**2))))\n",
+    "    pdf_vals[np.isclose(pdf_vals, np.zeros_like(pdf_vals), atol = 1e-25)] = 1e-24\n",
     "    \n",
     "    return pdf_vals\n"
    ]
@@ -153,53 +154,31 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Lenovo\\Anaconda3\\lib\\site-packages\\ipykernel\\__main__.py:18: RuntimeWarning: divide by zero encountered in log\n",
-      "C:\\Users\\Lenovo\\Anaconda3\\lib\\site-packages\\scipy\\optimize\\optimize.py:628: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  grad[k] = (f(*((xk + d,) + args)) - f0) / d[k]\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Results for question (a):\n",
-      "      fun: -96.706908090043953\n",
+      "      fun: -96.706908089273227\n",
       " hess_inv: <4x4 LbfgsInvHessProduct with dtype=float64>\n",
-      "      jac: array([ 0.00726885,  0.00053859,  0.00042917, -0.00304681])\n",
+      "      jac: array([-0.02229683, -0.00039506, -0.00163993,  0.00202505])\n",
       "  message: b'CONVERGENCE: REL_REDUCTION_OF_F_<=_FACTR*EPSMCH'\n",
-      "     nfev: 300\n",
-      "      nit: 34\n",
+      "     nfev: 310\n",
+      "      nit: 26\n",
       "   status: 0\n",
       "  success: True\n",
-      "        x: array([ 0.45756255,  0.72045842,  9.52207362,  0.0919961 ])\n",
-      "0.888881111111 0.55555 1e-05 11.1111155556\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Lenovo\\Anaconda3\\lib\\site-packages\\ipykernel\\__main__.py:39: RuntimeWarning: divide by zero encountered in log\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "        x: array([ 0.45756074,  0.72045502,  9.52209686,  0.09199632])\n",
+      "0.749995 0.499995 15.0000025 15.0000025\n",
       "Results for question (b):\n",
-      "      fun: -96.706908090043953\n",
+      "      fun: -96.706908089273227\n",
       " hess_inv: <4x4 LbfgsInvHessProduct with dtype=float64>\n",
-      "      jac: array([ 0.00726885,  0.00053859,  0.00042917, -0.00304681])\n",
+      "      jac: array([-0.02229683, -0.00039506, -0.00163993,  0.00202505])\n",
       "  message: b'CONVERGENCE: REL_REDUCTION_OF_F_<=_FACTR*EPSMCH'\n",
-      "     nfev: 300\n",
-      "      nit: 34\n",
+      "     nfev: 310\n",
+      "      nit: 26\n",
       "   status: 0\n",
       "  success: True\n",
-      "        x: array([ 0.45756255,  0.72045842,  9.52207362,  0.0919961 ])\n",
-      "0.222227777778 0.77777 20.0 11.1111155556\n"
+      "        x: array([ 0.45756074,  0.72045502,  9.52209686,  0.09199632])\n",
+      "1e-05 0.499995 5.0000075 20.0\n"
      ]
     }
    ],
@@ -208,10 +187,10 @@
     "import scipy.optimize as opt\n",
     "\n",
     "# Instead of checking one set of initial parameters, we will test a whole sets of them and returned the one with the biggest value\n",
-    "alpha_vec = np.linspace(1e-5, (1 - 1e-5), 10)\n",
-    "rho_vec = np.linspace((1e-5 - 1), (1 - 1e-5), 10)\n",
-    "mu_vec = np.linspace(1e-5, 20, 10)\n",
-    "sigma_vec = np.linspace(1e-5, 20, 10)\n",
+    "alpha_vec = np.linspace(1e-5, (1 - 1e-5), 5)\n",
+    "rho_vec = np.linspace((1e-5 - 1), (1 - 1e-5), 5)\n",
+    "mu_vec = np.linspace(1e-5, 20, 5)\n",
+    "sigma_vec = np.linspace(1e-5, 20, 5)\n",
     "mle_args = (df[:, 2], df[:, 1], 1)\n",
     "mle2_args = (df[:, 3], df[:, 1], 2)\n",
     "bnds = ((1e-5, 1-(1e-5)), ((1e-5)-1, 1-(1e-5)), (1e-5, None), (1e-5, None))\n",
@@ -252,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -261,7 +240,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The probability that the interest rate this period will be greater than 1 is :  0.999999968199\n"
+      "The probability that the interest rate this period will be greater than 1 is :  0.999999968144\n"
      ]
     }
    ],
@@ -298,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
