--- a/Personal_lecture_material/Econ/wk4/GMMest.ipynb
+++ b/Personal_lecture_material/Econ/wk4/GMMest.ipynb
@@ -14,7 +14,13 @@
    "metadata": {},
    "source": [
     "## 1. MLE vs. GMM: Strengths and weaknesses\n",
-    "A paper by Fuhrer, et al (1995) studies the accuracy and efficiency of the maximum likelihood (ML) estimator versus the generalized method of moments (GMM) estimator in the context of a simple linear-quadratic inventory model. They find that ML has some very nice properties over GMM in small samples when the model is simple. In the spirit of the Fuhrer, et al (1995) paper, we list the strengths and weaknesses of MLE vs. GMM more generally. I recommend you read the introduction to Fuhrer, et al (1995)."
+    "A paper by Fuhrer, et al (1995) studies the accuracy and efficiency of the maximum likelihood (ML) estimator versus the generalized method of moments (GMM) estimator in the context of a simple linear-quadratic inventory model. They find that ML has some very nice properties over GMM in small samples when the model is simple. In the spirit of the Fuhrer, et al (1995) paper, we list the strengths and weaknesses of MLE vs. GMM more generally. I recommend you read the introduction to Fuhrer, et al (1995).\n",
+    "1. MLE has distribution assumption while GMM doesn't\n",
+    "2. MLE is less sensitive to paramter or model normalization while GMM is more sensitive\n",
+    "3. Becasue of the assumed dsitribution, MLE has better small sample strength in estimation\n",
+    "4. MLE is weak when dealing with non-linear problem\n",
+    "5. GMM has very flexible identification\n",
+    "6. GMM doesn;t depend too much on assumptions."
    ]
   },
   {
@@ -76,11 +82,15 @@
     "\n",
     "A *moment* of the data is broadly defined as any statistic that summarizes the data to some degree. A data moment could be as narrow as an individual observation from the data or as broad as the sample average. GMM estimates the parameters of a model or data generating process to make the model moments as close as possible to the corresponding data moments. See Davidson and MacKinnon (2004, ch. 9) for a more detailed treatment of GMM. The estimation methods of linear least squares, nonlinear least squares, generalized least squares, and instrumental variables estimation are all specific cases of the more general GMM estimation method.\n",
     "\n",
-    "Let $m(x)$ be an $R\\times 1$ vector of moments from the real world data $x$. And let $x$ be an $N\\times K$ matrix of data with $K$ columns representing $K$ variables and $N$ observations. Let the model DGP be characterized as $F(x,\\theta)$, where $F$ is a vector of equations, each of which is a function of the data $x$ and the $K\\times 1$ parameter vector $\\theta$. Then define $m(x|\\theta)$ as a vector of $R$ moments from the model that correspond to the real-world moment vector $m(x)$. Note that GMM requires both real world data $x$ and deterministic moments from the model $m(x|\\theta)$ in order to estimate $\\hat{\\theta}_{GMM}$. There is also a stochastic way to generate moments from the model, which we discuss later in our section on Simulated Method of Moments (SMM).\n",
+    "Let $m(x)$ be an $R\\times 1$ vector of moments from the real world data $x$(moments are just statistics on real world data).And let $x$ be an $N\\times K$ matrix of data with $K$ columns representing $K$ variables and $N$ observations. Let the model DGP be characterized as $F(x,\\theta)$, where $F$ is a vector of equations, each of which is a function of the data $x$ and the $K\\times 1$ parameter vector $\\theta$. Then define $m(x|\\theta)$ as a vector of $R$ moments from the model that correspond to the real-world moment vector $m(x)$. Note that GMM requires both real world data $x$ and deterministic moments from the model $m(x|\\theta)$ in order to estimate $\\hat{\\theta}_{GMM}$. There is also a stochastic way to generate moments from the model, which we discuss later in our section on Simulated Method of Moments (SMM).\n",
     "\n",
     "The GMM approach of estimating the parameter vector $\\hat{\\theta}_{GMM}$ is to choose $\\theta$ to minimize some distance measure of the data moments $m(x)$ from the model moments $m(x|\\theta)$.\n",
     "\n",
     "$$ \\hat{\\theta}_{GMM}=\\theta:\\quad \\min_{\\theta}\\: ||m(x|\\theta)-m(x)|| $$\n",
+    "\n",
+    "(Several comments:\n",
+    "    1. The choice of norm is really important\n",
+    "    2. The choice of moments is also quite important)\n",
     "\n",
     "The distance measure $||m(x|\\theta)-m(x)||$ can be any kind of norm. But it is important to recognize that your estimates $\\hat{\\theta}_{GMM}$ will be dependent on what distance measure (norm) you choose. The most widely studied and used distance metric in GMM estimation is the $L^2$ norm or the sum of squared errors in moments. Define the moment error function $e(x|\\theta)$ as the percent difference in the vector of model moments from the data moments.\n",
     "\n",
@@ -144,7 +154,9 @@
     "\n",
     "$$ \\hat{\\theta}_{2, GMM}=\\theta:\\quad \\min_{\\theta}\\:e(x|\\theta)^T \\, \\hat{W}^{two-step} \\, e(x|\\theta) $$\n",
     "\n",
-    "$\\hat{\\theta}_{2, GMM}$ is called the two-step GMM estimator."
+    "$\\hat{\\theta}_{2, GMM}$ is called the two-step GMM estimator.\n",
+    "\n",
+    "(Another way to execute tat might be using iterations to find a converged weighting matrix)"
    ]
   },
   {
@@ -232,8 +244,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Import packages and load the data\n",
@@ -256,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -316,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -486,9 +500,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mu_GMM1= 556.615669609  sig_GMM1= 176.264620456\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "      fun: array([[  1.03372872e-07]])\n",
+       " hess_inv: <2x2 LbfgsInvHessProduct with dtype=float64>\n",
+       "      jac: array([ -1.35588906e-06,   4.93659167e-06])\n",
+       "  message: b'CONVERGENCE: NORM_OF_PROJECTED_GRADIENT_<=_PGTOL'\n",
+       "     nfev: 75\n",
+       "      nit: 16\n",
+       "   status: 0\n",
+       "  success: True\n",
+       "        x: array([ 556.61566961,  176.26462046])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Note that this takes a little time because the intgr.quad() commands\n",
     "# are a little slow\n",
@@ -500,13 +542,16 @@
     "results = opt.minimize(criterion, params_init, args=(gmm_args),\n",
     "                       method='L-BFGS-B', bounds=((1e-10, None), (1e-10, None)))\n",
     "mu_GMM1, sig_GMM1 = results.x\n",
-    "print('mu_GMM1=', mu_GMM1, ' sig_GMM1=', sig_GMM1)"
+    "print('mu_GMM1=', mu_GMM1, ' sig_GMM1=', sig_GMM1)\n",
+    "results"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "mean_data, var_data = data_moments(pts)\n",
@@ -528,7 +573,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Plot the histogram of the data\n",
@@ -557,7 +604,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Note that this will take a few minutes because the intgr.quad() commands\n",
@@ -600,7 +649,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "err1 = err_vec(pts, mu_GMM1, sig_GMM1, 450.0, False)\n",
@@ -615,7 +666,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Note that this takes a little time because the intgr.quad() commands\n",
@@ -646,7 +699,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def data_moments4(xvals):\n",
@@ -831,7 +886,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(data_moments4(pts))\n",
@@ -843,7 +900,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Note that this takes a little time because the intgr.quad() commands\n",
@@ -864,7 +923,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(data_moments4(pts))\n",
@@ -876,7 +937,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Plot the histogram of the data\n",
@@ -904,7 +967,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "err1_4 = err_vec4(pts, mu_GMM1_4, sig_GMM1_4, 450.0, False)\n",
@@ -917,7 +982,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Note that this takes a little time because the intgr.quad() commands\n",
@@ -943,7 +1010,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Note that this will take a few minutes because the intgr.quad() commands\n",
@@ -1037,7 +1106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
