uploading structural estimation homework

--- a/Personal_lecture_material/Econ/wk4/Exercise_2.ipynb
+++ b/Personal_lecture_material/Econ/wk4/Exercise_2.ipynb
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -168,6 +168,10 @@
       "  success: True\n",
       "        x: array([ 0.45756074,  0.72045502,  9.52209686,  0.09199632])\n",
       "0.749995 0.499995 15.0000025 15.0000025\n",
+      "Hessian inverse:  [[  5.12911157e+00  -1.41381947e+00  -7.09940430e+01  -1.01771233e+00]\n",
+      " [ -1.41381947e+00   4.10215608e-01   1.95727548e+01   2.76106245e-01]\n",
+      " [ -7.09940430e+01   1.95727548e+01   9.82658195e+02   1.40854504e+01]\n",
+      " [ -1.01771233e+00   2.76106245e-01   1.40854504e+01   2.03926662e-01]]\n",
       "Results for question (b):\n",
       "      fun: -96.706908089273227\n",
       " hess_inv: <4x4 LbfgsInvHessProduct with dtype=float64>\n",
@@ -178,7 +182,11 @@
       "   status: 0\n",
       "  success: True\n",
       "        x: array([ 0.45756074,  0.72045502,  9.52209686,  0.09199632])\n",
-      "1e-05 0.499995 5.0000075 20.0\n"
+      "1e-05 0.499995 5.0000075 20.0\n",
+      "Hessian inverse:  [[  6.79012841e+01  -6.34836078e+01  -1.21989927e+03   1.64575664e+00]\n",
+      " [ -6.34836078e+01   6.37782364e+01   1.14023421e+03  -1.39281088e+00]\n",
+      " [ -1.21989927e+03   1.14023421e+03   2.19164584e+04  -2.95773484e+01]\n",
+      " [  1.64575664e+00  -1.39281088e+00  -2.95773484e+01   4.71162182e-02]]\n"
      ]
     }
    ],
@@ -223,15 +231,17 @@
     "print(\"Results for question (a):\")\n",
     "print(final_results)\n",
     "print(alpha0, rho0, mu0, sigma0)\n",
+    "print(\"Hessian inverse: \",final_results.hess_inv.todense())\n",
     "final_results2, alpha0_2, rho0_2, mu0_2, sigma0_2 = init_finder(alpha_vec, rho_vec, mu_vec, sigma_vec, mle2_args, bnds, mle_fun, mle_params, mle_results)\n",
     "print(\"Results for question (b):\")\n",
     "print(final_results)\n",
-    "print(alpha0_2, rho0_2, mu0_2, sigma0_2)"
+    "print(alpha0_2, rho0_2, mu0_2, sigma0_2)\n",
+    "print(\"Hessian inverse: \",final_results2.hess_inv.todense())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
