--- a/probsets/computation/probset4/CondStab_probset.ipynb
+++ b/probsets/computation/probset4/CondStab_probset.ipynb
@@ -2,7 +2,78 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from matplotlib import pyplot as plt\n",
+    "from scipy import linalg as la\n",
+    "from sympy import subfactorial as sub\n",
+    "from sympy import integrate as integ\n",
+    "from sympy import exp\n",
+    "from sympy.abc import x\n",
+    "import math\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#problem 1\n",
+    "def prob1(A):\n",
+    "    singvals= la.svdvals(A)\n",
+    "    singmax = singvals.max()\n",
+    "    singmin = singvals.min()\n",
+    "    if singmin == 0:\n",
+    "        return np.inf\n",
+    "    return (singmax/singmin)\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.96470087821\n",
+      "1.96470087821\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([[1, 0, 3], [0, 6,1]])\n",
+    "print(prob1(A))\n",
+    "print(np.linalg.cond(A))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#problem 2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -16,20 +87,162 @@
     "from sympy import exp\n",
     "from sympy.abc import x\n",
     "import math\n",
-    "from astropy.table import Table\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#problem 1\n",
+    "from astropy.table import Table\n",
+    "\n",
+    "\n",
+    "\n",
+    "#Problem 1\n",
     "def prob1(A):\n",
-    "    singvals= la.svds"
+    "    \"\"\"Take in a matrix A and compute its condition number using singular\n",
+    "    value decomposition. The largest singular value is divided by the smallest.\n",
+    "    \"\"\"\n",
+    "    svds = la.svdvals(A)\n",
+    "    k = np.argsort(svds)\n",
+    "    if svds[k[0]] == 0:\n",
+    "        return np.inf\n",
+    "    else:\n",
+    "        return svds[k[-1]]/svds[k[0]]\n",
+    "\n",
+    "\n",
+    "# Problem 2\n",
+    "def prob2():\n",
+    "    \"\"\"Randomly perturb w_coeff by replacing each coefficient a_i with\n",
+    "    a_i*r_i, where r_i is drawn from a normal distribution centered at 1 with\n",
+    "    standard deviation 1e-10.\n",
+    "    Plot the roots of 100 such experiments in a single graphic, along with the\n",
+    "    roots of the unperturbed polynomial w(x).\n",
+    "    Using the final experiment only, estimate the relative and absolute\n",
+    "    condition number (in any norm you prefer).\n",
+    "    Returns:\n",
+    "        Display a graph of all 100 perturbations.\n",
+    "        Print the values of relative and absolute condition numbers.\n",
+    "    \"\"\"\n",
+    "    w_roots = np.arange(1, 21)\n",
+    "    w_coeffs = np.array([1, -210, 20615, -1256850, 53327946, -1672280820,\n",
+    "                        40171771630, -756111184500, 11310276995381,\n",
+    "                        -135585182899530, 1307535010540395,\n",
+    "                        -10142299865511450, 63030812099294896,\n",
+    "                        -311333643161390640, 1206647803780373360,\n",
+    "                        -3599979517947607200, 8037811822645051776,\n",
+    "                        -12870931245150988800, 13803759753640704000,\n",
+    "                        -8752948036761600000, 2432902008176640000])\n",
+    "    reals=np.arange(1,21)\n",
+    "    imags=np.zeros(20)\n",
+    "    for i in range(200):\n",
+    "        tempc=np.copy(w_coeffs)\n",
+    "        r=np.random.normal(1,1e-10,21)\n",
+    "        tempc*=r\n",
+    "        reals=np.append(reals,np.roots(np.poly1d(tempc)).real)\n",
+    "        imags=np.append(imags,np.roots(np.poly1d(tempc)).imag)\n",
+    "    plt.plot(reals[:20],imags[:20],'*')\n",
+    "    plt.plot(reals[20:],imags[20:],',')\n",
+    "    plt.show()\n",
+    "    pt_roots=np.roots(np.poly1d(tempc))\n",
+    "    k=la.norm(pt_roots-w_roots,np.inf)/la.norm(r,np.inf)\n",
+    "    k_r=k*la.norm(w_coeffs,np.inf)/la.norm(w_roots,np.inf)\n",
+    "    return k,k_r\n",
+    "\n",
+    "\n",
+    "# Problem 3\n",
+    "def eig_condit(M):\n",
+    "    \"\"\"Approximate the condition number of the eigenvalue problem at M.\n",
+    "    Inputs:\n",
+    "        M ((n,n) ndarray): A square matrix.\n",
+    "    Returns:\n",
+    "        (float) absolute condition number of the eigenvalue problem at M.\n",
+    "        (float) relative condition number of the eigenvalue problem at M.\n",
+    "    \"\"\"\n",
+    "    eigs=la.eig(M)[0]\n",
+    "    perturb=np.random.normal(0,1e-10,M.shape)+np.random.normal(0,1e-10,M.shape)*1j\n",
+    "    eigsp = la.eig(M+perturb)[0]\n",
+    "    k=la.norm(eigs-eigsp)/la.norm(perturb)\n",
+    "    return k,k*la.norm(M)/la.norm(eigs)\n",
+    "\n",
+    "# Problem 4\n",
+    "def plot_eig_condit(x0=-100, x1=100, y0=-100, y1=100, res=200):\n",
+    "    \"\"\"Create a grid [x0, x1] x [y0, y1] with the given resolution. For each\n",
+    "    entry (x,y) in the grid, find the relative condition number of the\n",
+    "    eigenvalue problem, using the matrix   [[1 x]\n",
+    "                                            [y 1]]  as the input.\n",
+    "    Use plt.pcolormesh() to plot the condition number over the entire grid.\n",
+    "    Inputs:\n",
+    "        x0 (float): min x-value.\n",
+    "        x1 (float): max x-value.\n",
+    "        y0 (float): min y-value.\n",
+    "        y1 (float): max y-value.\n",
+    "        res (int): number of points along each edge of the grid.\n",
+    "    \"\"\"\n",
+    "    x = np.linspace(x0,x1,res)\n",
+    "    y = np.linspace(y0,y1,res)\n",
+    "    Z = np.empty((res,res))\n",
+    "    for i in range(res):\n",
+    "        for j in range(res):\n",
+    "            A=np.array([[1,x[i]],[y[j],1]])\n",
+    "            Z[i,j] = eig_condit(A)[1]\n",
+    "    X,Y = np.meshgrid(x,y)\n",
+    "    plt.pcolormesh(X,Y,Z,cmap='gray_r')\n",
+    "    plt.colorbar()\n",
+    "    plt.show()\n",
+    "    \n",
+    "# Problem 5            \n",
+    "def prob5(n):\n",
+    "    \"\"\"\n",
+    "    Accepts an interger n and finds the least square solution to the stability data problem.\n",
+    "    Plots the forward errors.\n",
+    "    \"\"\"\n",
+    "    xk, yk = np.load('stability_data.npy').T\n",
+    "    A = np.vander(xk, n+1)\n",
+    "    cinv = la.inv(A.T@A)@A.T@yk\n",
+    "    Q,R = la.qr(A,mode='economic')\n",
+    "    cqr = la.solve(R,Q.T@yk)\n",
+    "    dom = np.linspace(np.amin(xk),np.amax(xk),50)\n",
+    "    plt.plot(xk,yk,'k*')\n",
+    "    plt.plot(dom,np.polyval(cinv,dom),label='inverse method',linewidth=2)\n",
+    "    plt.plot(dom,np.polyval(cqr,dom),label='qr method',linewidth=2)\n",
+    "    plt.legend(loc='upper left')\n",
+    "    plt.title(\"n={}\".format(n))\n",
+    "    plt.show()\n",
+    "    ferr1 = la.norm(A@cinv-yk,ord=2)\n",
+    "    ferr2 = la.norm(A@cqr-yk,ord=2)\n",
+    "    return ferr1, ferr2\n",
+    "\n",
+    "# Problem 6\n",
+    "def integral(n):\n",
+    "    \"\"\"Calculate the integral from 0 to 1 of x^n e^{x-1} dx using the closed\n",
+    "    form solution (-1)^n !n + (-1)^{n+1} n!/e.\n",
+    "    \"\"\"\n",
+    "    return (-1)**n*sub(n)+(-1)**(n+1)*(math.factorial(n)/np.exp(1))\n",
+    "\n",
+    "def prob6():\n",
+    "    \"\"\"For the values of n in the problem, compute integral(n). Compare\n",
+    "    the values to the actual values, and print your explanation of what\n",
+    "    is happening.\n",
+    "    \"\"\"\n",
+    "    # Actual values of the integral at specified n.\n",
+    "    ns=[1,5,10,15,20,25,30,35,40,45,50]\n",
+    "    actual_values = []\n",
+    "    vals=[]\n",
+    "    rfe=[]\n",
+    "    for n in ns:\n",
+    "        act=float(integ(x**n * exp(x-1),(x,0,1)))\n",
+    "        comp=integral(n)\n",
+    "        vals.append(comp)\n",
+    "        actual_values.append(act)\n",
+    "        rfen=np.abs(act-comp)/np.abs(act)\n",
+    "        rfe.append(rfen)\n",
+    "    plt.plot(ns,rfe)\n",
+    "    plt.yscale('log')\n",
+    "    plt.show()\n",
+    "        \n",
+    "    #rfe=la.norm(actual-computed)/la.norm(actual)\n",
+    "    \n",
+    "    t=Table()\n",
+    "    t['ns']=ns\n",
+    "    t['Actual values']=actual_values\n",
+    "    t['Computed values']=vals\n",
+    "    #print(t)\n",
+    "    #print(\"There is error coming from the fact that values close together are being subtracted, so the computer can't store them properly because the difference is so small.\")\n",
+    "    "
    ]
   }
  ],
