--- a/probsets/math/wk5/ProbSet5.tex
+++ b/probsets/math/wk5/ProbSet5.tex
@@ -86,7 +86,11 @@
 	\item(7.13)\\
 	If f is not constant, W.L.O.G., $f(a) < f(b)$ for $a < b$. For $c > b$, since the epigraph is also convex, $f(c) \leq f(a) + (c - a)\frac{f(b) - f(a)}{b - a}$. When c goes to inifinity, then f cannot be bounded above. Therefore f has to be a constant function.\\
 
+	\item(7.20)\\
+	If f is convex, then $f(\lambda x + (1 - \lambda)y) \leq \lambda f(x) + (1 - \lambda)f(y)$. Similarly for $-f$: $-f(\lambda x + (1 - \lambda)y) \leq -\lambda f(x) - (1 - \lambda)f(y)$. These two inequality implies that $f(\lambda x + (1 - \lambda)y) = \lambda f(x) + (1 - \lambda)f(y)$, indicating f is a linear function, therefore affine.\\
 	
+	\item(7.21)\\
+	Since $x \in \mathbb{R}^{n}$, the minimize $x^{*}$ is an interior point. If $x^{*}$ is the local minimizer of the first optimization problem, then $\phi^{'}f^{'}(x^{*}) = 0$, $f^{'}(x^{*}) = 0$ because $\phi (x)$ is a strictly increasing function. It's easy to prove the other direction since $f^{'}(x^{*}) = 0 \implies \phi^{'}f^{'}(x^{*}) = 0$\\
 	
 
 \end{enumerate}
