--- a/probsets/econ/wk5/ProbSet_DSGE.tex
+++ b/probsets/econ/wk5/ProbSet_DSGE.tex
@@ -106,8 +106,78 @@
 	\end{equation}
 
 	\item(Exercise 3)\\
-	
+	\begin{equation} \label{eq1}
+	\begin{split}
+	\text{Budget cosntraint:} \quad c_{t} = (1 - \tau)[w_{t}l_{t} + (r_{t} - \delta)k_{t}] + k_{t} + T_{t} - k_{t + 1}\\
+	\end{split}
+	\end{equation}
+	\begin{equation} \label{eq2}
+	\begin{split}
+	\text{Intertemporal Euler:} \quad c_{t}^{-\gamma} = \beta E_{t}\{  c_{t + 1}^{-\gamma}[(r_{t + 1} - \delta)(1 - \tau) + 1]\} \\
+	\end{split}
+	\end{equation}
+	\begin{equation} \label{eq3}
+	\begin{split}
+	\text{Consumption-leisure Euler:} \quad \frac{a}{1 - l_{t}} = c_{t}^{-\gamma}w_{t}(1 - \tau)\\
+	\end{split}
+	\end{equation}
+	\begin{equation} \label{eq4}
+	\begin{split}
+	\text{Capital FOC:} \quad r_{t} = \alpha e^{z_{t}} k_{t}^{\alpha - 1} l_{t}^{1 - \alpha} \\
+	\end{split}
+	\end{equation}
+	\begin{equation} \label{eq5}
+	\begin{split}
+	\text{Labor FOC:} \quad w_{t} = (1 - \alpha) e^{z_{t}} k_{t}^{\alpha } l_{t}^{ - \alpha} \\
+	\end{split}
+	\end{equation}
+	\begin{equation} \label{eq6}
+	\begin{split}
+	\text{Government budget:} \quad \tau[w_{t}l_{t} + (r_{t} - \delta)k_{t}] = T_{t}  \\
+	\end{split}
+	\end{equation}
+	\begin{equation} \label{eq7}
+	\begin{split}
+	\text{Law of motions:} \quad z_{t} = (1 - \rho_{z})\bar{z} + \rho_{z}z_{t - 1} + \epsilon_{t}^{z} \\
+	\end{split}
+	\end{equation}		
+
 	\item(Exercise 4)\\
+	\begin{equation} \label{eq1}
+	\begin{split}
+	\text{Budget cosntraint:} \quad c_{t} = (1 - \tau)[w_{t}l_{t} + (r_{t} - \delta)k_{t}] + k_{t} + T_{t} - k_{t + 1}\\
+	\end{split}
+	\end{equation}
+	\begin{equation} \label{eq2}
+	\begin{split}
+	\text{Intertemporal Euler:} \quad c_{t}^{-\gamma} = \beta E_{t}\{  c_{t + 1}^{-\gamma}[(r_{t + 1} - \delta)(1 - \tau) + 1]\} \\
+	\end{split}
+	\end{equation}
+	\begin{equation} \label{eq3}
+	\begin{split}
+	\text{Consumption-leisure Euler:} \quad a(1 - l_{t})^{-\xi} = c_{t}^{-\gamma}w_{t}(1 - \tau)\\
+	\end{split}
+	\end{equation}
+	\begin{equation} \label{eq4}
+	\begin{split}
+	\text{Capital FOC:} \quad r_{t} = \alpha e^{z_{t}}k_{t}^{\eta - 1}[\alpha k_{t}^{\eta} + (1 - \alpha)l_{t}^{\eta}]^{\frac{1}{\eta} - 1} \\
+	\end{split}
+	\end{equation}
+	\begin{equation} \label{eq5}
+	\begin{split}
+	\text{Labor FOC:} \quad w_{t} =  (1 - \alpha) e^{z_{t}}l_{t}^{\eta - 1}[\alpha k_{t}^{\eta} + (1 - \alpha)l_{t}^{\eta}]^{\frac{1}{\eta} - 1} \\
+	\end{split}
+	\end{equation}
+	\begin{equation} \label{eq6}
+	\begin{split}
+	\text{Government budget:} \quad \tau[w_{t}l_{t} + (r_{t} - \delta)k_{t}] = T_{t}  \\
+	\end{split}
+	\end{equation}
+	\begin{equation} \label{eq7}
+	\begin{split}
+	\text{Law of motions:} \quad z_{t} = (1 - \rho_{z})\bar{z} + \rho_{z}z_{t - 1} + \epsilon_{t}^{z} \\
+	\end{split}
+	\end{equation}
 
 	\item(Exercise 5)\\
 	\begin{equation} \label{eq1}
@@ -166,8 +236,58 @@
 	\text{Government budget:} \quad \tau[\bar{w} + (\bar{r} - \delta)\bar{k}] = \bar{T}  \\
 	\end{split}
 	\end{equation}
-	When being solved algebrically, $\bar{k} =\alpha^{\frac{1}{1 - \alpha}}(\frac{1}{1 - \tau}(\frac{1}{\beta} - 1) + \delta)^{\frac{1}{\alpha - 1}} e^{\bar{z}}$. Taking the value given in the question, we get $\bar{k} = 0.00919466769781$\\
+	When being solved algebrically, $\bar{k} =\alpha^{\frac{1}{1 - \alpha}}(\frac{1}{1 - \tau}(\frac{1}{\beta} - 1) + \delta)^{\frac{1}{\alpha - 1}} e^{\bar{z}}$. Taking the value given in the question, we get $\bar{k} =7.28749795069$\\
+	The numerical solutions for Problem 5: \\
+	Steady state capital:  [ 7.28749795]\\
+	Steady state output:  [ 2.21325461]\\
+	Steady state investment:  [ 0.7287498] \\
 	
+
+
+	\item(Exercise 6)\\
+	\begin{equation} \label{eq1}
+	\begin{split}
+	\text{Budget cosntraint:} \quad c_{t} = (1 - \tau)[w_{t}l_{t} + (r_{t} - \delta)k_{t}] + k_{t} + T_{t} - k_{t + 1}\\
+	\end{split}
+	\end{equation}
+	\begin{equation} \label{eq2}
+	\begin{split}
+	\text{Intertemporal Euler:} \quad c_{t}^{-\gamma} = \beta E_{t}\{  c_{t + 1}^{-\gamma}[(r_{t + 1} - \delta)(1 - \tau) + 1]\} \\
+	\end{split}
+	\end{equation}
+	\begin{equation} \label{eq3}
+	\begin{split}
+	\text{Consumption-leisure Euler:} \quad a(1 - l_{t})^{-\xi} = c_{t}^{-\gamma}w_{t}(1 - \tau)\\
+	\end{split}
+	\end{equation}
+	\begin{equation} \label{eq4}
+	\begin{split}
+	\text{Capital FOC:} \quad r_{t} = \alpha k_{t}^{\alpha - 1} (l_{t}e^{z_{t}})^{1 - \alpha} \\
+	\end{split}
+	\end{equation}
+	\begin{equation} \label{eq5}
+	\begin{split}
+	\text{Labor FOC:} \quad w_{t} = (1 - \alpha)k_{t}^{\alpha} l_{t}^{- \alpha} e^{z_{t}(1 - \alpha)} \\
+	\end{split}
+	\end{equation}
+	\begin{equation} \label{eq6}
+	\begin{split}
+	\text{Government budget:} \quad \tau[w_{t}l_{t} + (r_{t} - \delta)k_{t}] = T_{t}  \\
+	\end{split}
+	\end{equation}
+	\begin{equation} \label{eq7}
+	\begin{split}
+	\text{Law of motions:} \quad z_{t} = (1 - \rho_{z})\bar{z} + \rho_{z}z_{t - 1} + \epsilon_{t}^{z} \\
+	\end{split}
+	\end{equation}
+	The numerical solutions for Problem 6: \\
+
+	Steady state capital:  4.22522902519\\
+	Steady state labor:  0.579791453145\\
+	Steady state output:  1.28322610861\\
+	Steady state investment:  0.422522902519\\
+
+
 
 \end{enumerate}
 
